--- a/bin/config.yml
+++ b/bin/config.yml
@@ -14,7 +14,7 @@ BadWords:
   - "dick"
   - "fuck"
   - "\\b(bull)?shit(ty)?\\b"
-  - "crap(py)?"
+  - "\\b(bull)?crap(py)?"
   - "penis"
   - "vagina"
   - "fag"
@@ -58,6 +58,7 @@ GroupColours:
   - "KoolKat,5"
   - "KatGod,6"
   - "UltimateKat,u"
+  - "Builder,3"
   - "Developer,b"
   - "Helper,b"
   - "Mod,c"
