Add New Commands, and Improve Other Stuff
- Redeem now integrates with vault rather than running commands from
console
- Promote command allows setting certain groups
- Op command, checks both user and target permissions
- Fixes to the nameplate setter
- Improve some things for the garbage collector
- More comments and logging
- Small setup for future features

--- a/bin/config.yml
+++ b/bin/config.yml
@@ -1,5 +1,5 @@
 #Do not change this, this is the option that resets outdated config
-Version: 4.3.1
+Version: 4.4
 
 #Msg shown when people say bad things
 DenyMsg: "We do not allow that kind of language! Sorry!"
@@ -65,3 +65,15 @@ GroupColours:
   - "Admin,4"
   - "SeniorAdmin,s"
   - "Owner,w"
+
+#Groups that can be assigned using catbot - case insensitive
+AllowedGroups:
+  - "default"
+  - "member"
+  - "fan"
+  - "VIP"
+  - "VIP+"
+  - "KoolKat"
+  - "KatGod"
+  - "UltimateKat"
+  - "UnlimitedHomes"
