Fix Redeem Command on Servers using Numeric IDs
- Fix bug where redeem command would sometimes not work when given
numeric IDs
- Prepare for delayed commands

--- a/src/commands.yml
+++ b/src/commands.yml
@@ -4,8 +4,8 @@ Version: 4.4
 #List of commands to execute later. I wouldn't recommend manually editting this
 #but if you really really really want to it probably wouldn't be hard.
 StoredCommands:
-    1:
-        Player: CatBot
-        SentBy: Kraise_
-        Command: redeem kraise_ wool 2
+    0:
+        PlayerName: CatBot
+        Sender: Kraise_
+        Command: redeem CatBot wool 1 2
         TimeStamp: 10:32 15/04/2016
