Fix for Players with Multiple Chat Prefixes
- Now should recognise each chat prefix separately
- All prefixes will follow priority rules
- Some more stuff preparing for ScheduledCommand

--- a/src/commands.yml
+++ b/src/commands.yml
@@ -3,6 +3,7 @@ Version: 4.4
 
 #List of commands to execute later. I wouldn't recommend manually editting this
 #but if you really really really want to it probably wouldn't be hard.
+#Changes may be overwritten at any time and ignored, so probably don't.
 StoredCommands:
     0:
         PlayerName: CatBot
