--- a/src/config.yml
+++ b/src/config.yml
@@ -1,5 +1,5 @@
 #Do not change this, this is the option that resets outdated config
-Version: 4.5
+Version: 4.7
 
 #Msg shown when people say bad things
 DenyMsg: "We do not allow that kind of language! Sorry!"
@@ -110,6 +110,9 @@ RTP:
       - HARD_CLAY
       - MYCEL
 
+#Questions:
+#    - "is.{5,40}banned;You can find the banned items list (with reasons) at http://kkmc.info/21MSqpn"
+#    - "am i an shrub;ye"
 
 #Whitelist: Do not use this!
 #    Enabled: true
