--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,6 @@
 main: com.kookykraftmc.catbot.CatBot
 name: CatBot
+version: 4.7
 authors: [Time6628, Kraise_]
 depend: [Vault]
 description: KKMC's ChatBox plugin.
